tests/baselines/reference/decoratorOnClassProperty3(strict=true).errors.txt
decoratorOnClassProperty3.ts(4,5): error TS7008: Member 'public' implicitly has an 'any' type.
decoratorOnClassProperty3.ts(4,12): error TS1436: Decorators must precede the name and all keywords of property declarations.
decoratorOnClassProperty3.ts(4,17): error TS7008: Member 'prop' implicitly has an 'any' type.


==== decoratorOnClassProperty3.ts (3 errors) ====
    declare function dec(target: any, propertyKey: string): void;
    
    class C {
        public @dec prop;
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
               ~
!!! error TS1436: Decorators must precede the name and all keywords of property declarations.
                    ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }